--- a/src/views/main/index.html
+++ b/src/views/main/index.html
@@ -37,10 +37,6 @@ src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
     <div class="section-main section" id="sec1">
         <div class="container">
             <header class="header">
-
-
-
-
                 <div class="header-logo-phone red__">
                     <div class="header-logo__ red__" style="height: 90px; margin-top: 20px;">
                         <img class="" src="/img/org/logo.png" alt="фото" style="height: 90px">
@@ -49,17 +45,18 @@ src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
 
                     <div id="header-phone" class="header-phone red__">
                         <a href="tel:+7(499)430-00-26" style="padding-left: 10px;">+7 (499) 430-00-26</a><br />
-                        <span style="color: #726f74; padding-left: 10px;">м. Новослободская</span>
+                        <span style="color: #726f74; padding-left: 10px;"><strong>info@salon-groom.ru</strong></span>
                     </div>
                 </div>
 
                 <nav id="menu" class="menu-nav">
                     <ul class="header_list">
-                        <li><a href="#work" class="header_li">Наши работы</a></li>
-                        <li><a href="#master" class="header_li">Наши мастера</a></li>
-                        <li><a href="#price" class="header_li">Прайс</a></li>
-                        <li><a href="#review" class="header_li">Отзывы</a></li>
-                        <li><a href="#contact" class="header_li">Контакты</a></li>
+                        <li><a href="/" class="header_li">Главная</a></li>
+                        <li><a href="/works" class="header_li">Наши работы</a></li>
+                        <li><a href="/masters" class="header_li">Наши мастера</a></li>
+                        <li><a href="/price" class="header_li">Прайс</a></li>
+                        <li><a href="/review" class="header_li">Отзывы</a></li>
+                        <li><a href="/contacts" class="header_li">Контакты</a></li>
                     </ul>
                 </nav>
 
