--- a/src/views/main/index.html
+++ b/src/views/main/index.html
@@ -27,9 +27,9 @@ s.parentNode.insertBefore(t,s)}(window, document,'script',
 fbq('init', '6568225839919373');
 fbq('track', 'PageView');
 </script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
-/></noscript>
+<!--<noscript><img height="1" width="1" style="display:none"-->
+<!--src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"-->
+<!--/></noscript>-->
 <!-- End Facebook Pixel Code -->
 </head>
 <body>
@@ -245,17 +245,17 @@ src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
         webvisor:true
     });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/70137172" style="position:absolute; left:-9999px;" alt="фото" /></div></noscript>
+<!--<noscript><div><img src="https://mc.yandex.ru/watch/70137172" style="position:absolute; left:-9999px;" alt="фото" /></div></noscript>-->
 <!-- /Yandex.Metrika counter -->
 
 <!-- Global site tag (gtag.js) - Google Ads: 342943335 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-342943335"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<!--<script async src="https://www.googletagmanager.com/gtag/js?id=AW-342943335"></script>-->
+<!--<script>-->
+<!--    window.dataLayer = window.dataLayer || [];-->
+<!--    function gtag(){dataLayer.push(arguments);}-->
+<!--    gtag('js', new Date());-->
 
-    gtag('config', 'AW-342943335');
-</script>
+<!--    gtag('config', 'AW-342943335');-->
+<!--</script>-->
 </body>
 </html>
