--- a/src/views/our-works/index.html
+++ b/src/views/our-works/index.html
@@ -15,21 +15,21 @@
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 
 	<!-- Facebook Pixel Code -->
-	<script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-            n.queue=[];t=b.createElement(e);t.async=!0;
-            t.src=v;s=b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t,s)}(window, document,'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '6568225839919373');
-        fbq('track', 'PageView');
-	</script>
-	<noscript><img height="1" width="1" style="display:none"
-				   src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
-	/></noscript>
+<!--	<script>-->
+<!--        !function(f,b,e,v,n,t,s)-->
+<!--        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?-->
+<!--            n.callMethod.apply(n,arguments):n.queue.push(arguments)};-->
+<!--            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';-->
+<!--            n.queue=[];t=b.createElement(e);t.async=!0;-->
+<!--            t.src=v;s=b.getElementsByTagName(e)[0];-->
+<!--            s.parentNode.insertBefore(t,s)}(window, document,'script',-->
+<!--            'https://connect.facebook.net/en_US/fbevents.js');-->
+<!--        fbq('init', '6568225839919373');-->
+<!--        fbq('track', 'PageView');-->
+<!--	</script>-->
+<!--	<noscript><img height="1" width="1" style="display:none"-->
+<!--				   src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"-->
+<!--	/></noscript>-->
 	<!-- End Facebook Pixel Code -->
 </head>
 <body>
@@ -199,29 +199,29 @@
 
 
 <!-- Yandex.Metrika counter -->
-<script>
-    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+<!--<script>-->
+<!--    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};-->
+<!--        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})-->
+<!--    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");-->
 
-    ym(70137172, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-    });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/70137172" style="position:absolute; left:-9999px;" alt="фото" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+<!--    ym(70137172, "init", {-->
+<!--        clickmap:true,-->
+<!--        trackLinks:true,-->
+<!--        accurateTrackBounce:true,-->
+<!--        webvisor:true-->
+<!--    });-->
+<!--</script>-->
+<!--<noscript><div><img src="https://mc.yandex.ru/watch/70137172" style="position:absolute; left:-9999px;" alt="фото" /></div></noscript>-->
+<!--&lt;!&ndash; /Yandex.Metrika counter &ndash;&gt;-->
 
-<!-- Global site tag (gtag.js) - Google Ads: 342943335 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-342943335"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<!--&lt;!&ndash; Global site tag (gtag.js) - Google Ads: 342943335 &ndash;&gt;-->
+<!--<script async src="https://www.googletagmanager.com/gtag/js?id=AW-342943335"></script>-->
+<!--<script>-->
+<!--    window.dataLayer = window.dataLayer || [];-->
+<!--    function gtag(){dataLayer.push(arguments);}-->
+<!--    gtag('js', new Date());-->
 
-    gtag('config', 'AW-342943335');
-</script>
+<!--    gtag('config', 'AW-342943335');-->
+<!--</script>-->
 </body>
 </html>
