--- a/src/views/main/index.html
+++ b/src/views/main/index.html
@@ -233,7 +233,7 @@ fbq('track', 'PageView');
 
 
 <!-- Yandex.Metrika counter -->
-<script>
+<!-- <script>
     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
         m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
     (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -244,7 +244,7 @@ fbq('track', 'PageView');
         accurateTrackBounce:true,
         webvisor:true
     });
-</script>
+</script> -->
 <!--<noscript><div><img src="https://mc.yandex.ru/watch/70137172" style="position:absolute; left:-9999px;" alt="фото" /></div></noscript>-->
 <!-- /Yandex.Metrika counter -->
 
