--- a/views/test/index.html
+++ b/views/test/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Груминг салон в Москве №1, стрижка собак и кошек премиум класса, лучшие мастера в Европе, стрижка, груминг, экспресс-линька в центре Москвы, 8(499)430-00-26">
-    <meta name="yandex" content="noindex, nofollow" />
-    <meta name="google-site-verification" content="I-zOAzToGG8jjZYE9mkj4A8ypX09_hg8BbMQSzS-6Gg" />
 
     <title>Груминг салон в Москве №1</title>
 
@@ -42,11 +40,12 @@ src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
                 <div class="header-logo-phone red__">
                     <div class="header-logo__ red__" style="height: 90px; margin-top: 20px;">
                         <img class="" src="/img/org/logo.png" alt="фото" style="height: 90px">
+                        
                     </div>
 
                     <div id="header-phone" class="header-phone red__">
                         <a href="tel:+7(499)430-00-26" style="padding-left: 10px;">+7 (499) 430-00-26</a><br />
-                        <span style="color: #726f74; padding-left: 10px;"><strong>info@salon-groom.ru</strong></span>
+                        <span style="color: #726f74; padding-left: 10px;">м. Новослободская</span>
                     </div>
                 </div>
 
@@ -82,7 +81,7 @@ src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
     <div class="section-our_work section" id="sec2">
         <div class="container">
             <div id="work">
-                <h1>Груминг салон в Москве</h1>
+                <h1>Груминг салон в Москве №1</h1>
                 <hr>
                 <div class="slider-desktop">
                     <div class="row">
@@ -1646,7 +1645,7 @@ src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
     <div class="section-recording" id="sec5">
         <div class="container">
             <form id="contactform" method="post" class="validateform" name="contactform">
-                <input id="csrf_field" type="hidden" value="csrf_field()">
+                <input type="hidden" name="_token" value="jk8sZwHoVSZ75bLEJMX2XqgzthTZnQuxI2wmUBbp">
 
                 <a id="top"></a>
 
@@ -1794,11 +1793,11 @@ src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
                             </div>
                         </div>
                         <div class="contact-site"><img src="/img/5.svg" alt="фото">пн-пт: 11:00 - 20:00 <span>сб-вс: 10:18</span></div>
-                        <div class="contact-site"><img src="/img/3.svg" alt="фото"><a href="mailto:info@salon-groom.ru">info@salon-groom.ru</a></div>
+                        <div class="contact-site"><img src="/img/3.svg" alt="фото"><a href="mailto:fo@salon-groom.ru">info@salon-groom.ru</a></div>
                         <div class="contact-site"><img src="/img/4.svg" alt="фото"><a href="https://www.instagram.com/salongroom1/?igshid=1pvyxcewbq2yq">salongroom1 Instagram</a></div>
                     </div>
                 </div>
-                <div class="footer-title"><a href="https://salon-groom.ru/">salon-groom.ru</a> ©@php echo Date('Y'); @endphp Все права защищены</div>
+                <div class="footer-title"><a href="https://salon-groom.ru/">salon-groom.ru</a> ©2022 Все права защищены</div>
             </div>
         </div>
     </footer>
