--- a/views/contacts/index.html
+++ b/views/contacts/index.html
@@ -1,14 +1,146 @@
-{% extends "templates/base.html" %}
-{% set title = "Главная страница transplant.net" %}
-{% set h1 = "transplant.net" %}
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Груминг салон в Москве №1, стрижка собак и кошек премиум класса, лучшие мастера в Европе, стрижка, груминг, экспресс-линька в центре Москвы, 8(499)430-00-26">
+    <meta name="yandex" content="noindex, nofollow" />
 
-{% block css %}
-{{ super() }}
-{% endblock %}
+    <title>Груминг салон в Москве №1</title>
 
-{% block content %}
-<div id="block-content">
-    <h3>Contacts {{ name }}</h3>
+    <link rel="icon" href="/img/favicon.ico">
 
+    <link rel="stylesheet" href="/css/app.css">
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+
+<!-- Facebook Pixel Code -->
+<!--<script>-->
+<!--!function(f,b,e,v,n,t,s)-->
+<!--{if(f.fbq)return;n=f.fbq=function(){n.callMethod?-->
+<!--n.callMethod.apply(n,arguments):n.queue.push(arguments)};-->
+<!--if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';-->
+<!--n.queue=[];t=b.createElement(e);t.async=!0;-->
+<!--t.src=v;s=b.getElementsByTagName(e)[0];-->
+<!--s.parentNode.insertBefore(t,s)}(window, document,'script',-->
+<!--'https://connect.facebook.net/en_US/fbevents.js');-->
+<!--fbq('init', '6568225839919373');-->
+<!--fbq('track', 'PageView');-->
+<!--</script>-->
+<!--<noscript><img height="1" width="1" style="display:none"-->
+<!--src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"-->
+<!--/></noscript>-->
+<!-- End Facebook Pixel Code -->
+</head>
+<body>
+<div class="wrapper">
+    <div class="section-main section" id="sec1">
+        <div class="container">
+            <header class="header">
+                <div class="header-logo-phone red__">
+                    <div class="header-logo__ red__" style="height: 90px; margin-top: 20px;">
+                        <img class="" src="/img/org/logo.png" alt="фото" style="height: 90px">
+                        
+                    </div>
+
+                    <div id="header-phone" class="header-phone red__">
+                        <a href="tel:+7(499)430-00-26" style="padding-left: 10px;">+7 (499) 430-00-26</a><br />
+                        <span style="color: #726f74; padding-left: 10px;"><strong>info@salon-groom.ru</strong></span>
+                    </div>
+                </div>
+
+                <nav id="menu" class="menu-nav">
+                    <ul class="header_list">
+                        <li><a href="/" class="header_li">Главная</a></li>
+                        <li><a href="/works" class="header_li">Наши работы</a></li>
+                        <li><a href="/masters" class="header_li" id="master-link">Наши мастера</a></li>
+                        <li><a href="/price" class="header_li">Прайс</a></li>
+                        <li><a href="/review" class="header_li">Отзывы</a></li>
+                        <li><a href="/contacts" class="header_li">Контакты</a></li>
+                    </ul>
+                </nav>
+
+                <div id="header-burger" class="header-burger toggle-mnu">
+                    <span></span>
+                </div>
+
+                <div>TEST</div>
+
+                <div class="header-img">
+                    <div class="section-img">
+                        <img src="/img/org/dogs.png" alt="section-img">
+                    </div>
+                    <div class="title-b ">
+                        <div>МЫ СТРИЖЕМ ВАШИХ ПИТОМЦЕВ С ЛЮБОВЬЮ <i class="fas fa-heart"></i></div>
+                    </div>
+                </div>
+
+                <div class="btn-section">
+                    <a class="btn" href="#top">Записаться</a>
+                </div>
+            </header>
+        </div>
+    </div>
+
+    <footer class="footer" id="sec9">
+        <div class="container">
+            <div class="title">Контакты</div>
+            <hr>
+            <div id="contact">
+                <div class="footer-contacts">
+                    <div class="contact">
+                        <div class="contact-site">
+                            <img src="/img/1.svg" alt="фото">
+                            <img style="width: 20px !important;
+                            margin-bottom: -6px !important;" src="/img/moscow_metro_mini.png" alt="фото"> Новослободская, Долгоруковская, 40
+                        </div>
+                        <div class="contact-site">
+                            <div id="footer-phone" class="phone">
+                                <img src="/img/2.svg" alt="фото">
+                                <a href="tel:+7(499)430-00-26">+7 (499) 430-00-26</a>
+                            </div>
+                        </div>
+                        <div class="contact-site"><img src="/img/5.svg" alt="фото">пн-пт: 11:00 - 20:00 <span>сб-вс: 10:18</span></div>
+                        <div class="contact-site"><img src="/img/3.svg" alt="фото"><a href="mailto:fo@salon-groom.ru">info@salon-groom.ru</a></div>
+                        <div class="contact-site"><img src="/img/4.svg" alt="фото"><a href="https://www.instagram.com/salongroom1/?igshid=1pvyxcewbq2yq">salongroom1 Instagram</a></div>
+                    </div>
+                </div>
+                <div class="footer-title"><a href="https://salon-groom.ru/">salon-groom.ru</a> ©2022 Все права защищены</div>
+            </div>
+        </div>
+    </footer>
 </div>
-{% endblock %}
+
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
+
+<script src="/js/common.js"></script>
+
+<!-- Yandex.Metrika counter -->
+<!--<script>-->
+<!--    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};-->
+<!--        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})-->
+<!--    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");-->
+
+<!--    ym(70137172, "init", {-->
+<!--        clickmap:true,-->
+<!--        trackLinks:true,-->
+<!--        accurateTrackBounce:true,-->
+<!--        webvisor:true-->
+<!--    });-->
+<!--</script>-->
+<!--<noscript><div><img src="https://mc.yandex.ru/watch/70137172" style="position:absolute; left:-9999px;" alt="фото" /></div></noscript>-->
+<!--&lt;!&ndash; /Yandex.Metrika counter &ndash;&gt;-->
+
+<!--&lt;!&ndash; Global site tag (gtag.js) - Google Ads: 342943335 &ndash;&gt;-->
+<!--<script async src="https://www.googletagmanager.com/gtag/js?id=AW-342943335"></script>-->
+<!--<script>-->
+<!--    window.dataLayer = window.dataLayer || [];-->
+<!--    function gtag(){dataLayer.push(arguments);}-->
+<!--    gtag('js', new Date());-->
+
+<!--    gtag('config', 'AW-342943335');-->
+<!--</script>-->
+</body>
+</html>
