--- a/views/templates/base.html
+++ b/views/templates/base.html
@@ -3,15 +3,19 @@
 
 <head>
 {% block meta %}
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="трансплантация">
+    <meta name="description" content="Груминг салон в Москве №1, стрижка собак и кошек премиум класса, лучшие мастера в Европе, стрижка, груминг, экспресс-линька в центре Москвы, 8(499)430-00-26">
+
 {% endblock %}
 
     <title>{{ title }}</title>
 
 {% block css %}
-    <link rel="icon" href="/favicon.ico" type="image/ico">
+    <link rel="icon" href="https://salon-groom.ru/public/img/favicon.ico">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/utility.css">
@@ -19,44 +23,68 @@
 {% endblock %}
 
 {% block js_top %}
+<!-- Facebook Pixel Code -->
+<!--<script type="text/javascript" async="" src="https://www.googleadservices.com/pagead/conversion_async.js"></script><script async="" src="https://mc.yandex.ru/metrika/tag.js"></script><script src="https://connect.facebook.net/signals/config/6568225839919373?v=2.9.48&amp;r=stable" async=""></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script>-->
+<!--!function(f,b,e,v,n,t,s)-->
+<!--{if(f.fbq)return;n=f.fbq=function(){n.callMethod?-->
+<!--n.callMethod.apply(n,arguments):n.queue.push(arguments)};-->
+<!--if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';-->
+<!--n.queue=[];t=b.createElement(e);t.async=!0;-->
+<!--t.src=v;s=b.getElementsByTagName(e)[0];-->
+<!--s.parentNode.insertBefore(t,s)}(window, document,'script',-->
+<!--'https://connect.facebook.net/en_US/fbevents.js');-->
+<!--fbq('init', '6568225839919373');-->
+<!--fbq('track', 'PageView');-->
+<!--</script>-->
+<!--<noscript><img height="1" width="1" style="display:none"-->
+<!--src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"-->
+<!--/></noscript>-->
+<!--&lt;!&ndash; End Facebook Pixel Code &ndash;&gt;-->
+<!--<script src="https://googleads.g.doubleclick.net/pagead/viewthroughconversion/342943335/?random=1641040317256&amp;cv=9&amp;fst=1641040317256&amp;num=1&amp;bg=ffffff&amp;guid=ON&amp;resp=GooglemKTybQhCsO&amp;eid=376635470&amp;u_h=1440&amp;u_w=2560&amp;u_ah=1322&amp;u_aw=2560&amp;u_cd=24&amp;u_his=1&amp;u_tz=180&amp;u_java=false&amp;u_nplug=5&amp;u_nmime=2&amp;gtm=2oac10&amp;sendb=1&amp;ig=1&amp;data=event%3Dgtag.config&amp;frm=0&amp;url=https%3A%2F%2Fsalon-groom.ru%2F&amp;tiba=%D0%93%D1%80%D1%83%D0%BC%D0%B8%D0%BD%D0%B3%20%D1%81%D0%B0%D0%BB%D0%BE%D0%BD%20%D0%B2%20%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B5%20%E2%84%961&amp;hn=www.googleadservices.com&amp;async=1&amp;rfmt=3&amp;fmt=4"></script>-->
 
 {% endblock %}
 </head>
 
-<div class="container flex direction-col">
-    <header id="header" class="header flex-item">
-        <a href="/"><img src="/img/logo.png" id="logo-pic" class="w-160" alt="logo" /></a>
-
-        <h2 class="mt-10">{{ h1 }}</h2>
-    </header>
-
-    <section id="section" class="section flex-item">
-        {% block content %}
-
+        {% block header %}
+            <p>block</p>
         {% endblock %}
-    </section>
 
-    <footer id="footer" class="footer flex-item">
-        <a class="patient-library" href="/infoDoc/doca" target="_blank">
-            <span class="material-icons icon">library_books</span><span class="text"> Библиотека врача</span>
-        </a>
 
-        <a class="patient-library" href="/info" target="_blank">
-            <span class="material-icons icon">library_books</span>
-            <span class="text"> Библиотека пациента</span>
-        </a>
-
-        <div class="patient-library">
-            <span class="text">Техподдержка</span>
-            <span class="text">
-                <script type="text/javascript">eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%27%3c%61%20%68%72%65%66%3d%22%6d%61%69%6c%74%6f%3a%73%65%72%67%69%6f%6e%6f%76%40%6f%6e%63%6f%6e%65%74%2e%6f%6e%6c%69%6e%65%3f%73%75%62%6a%65%63%74%3d%25%44%31%25%38%32%25%44%31%25%38%30%25%44%30%25%42%30%25%44%30%25%42%44%25%44%31%25%38%31%25%44%30%25%42%46%25%44%30%25%42%42%25%44%30%25%42%30%25%44%30%25%42%44%25%44%31%25%38%32%2e%6e%65%74%22%20%3e%73%65%72%67%69%6f%6e%6f%76%40%6f%6e%63%6f%6e%65%74%2e%6f%6e%6c%69%6e%65%3c%2f%61%3e%27%29%3b'))</script>
-            </span>
-        </div>
-    </footer>
-</div>
+        {% block content %}
+            <p>content</p>
+        {% endblock %}
 
 {% block js_bottom %}
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
 
+    <script src="https://salon-groom.ru/public/js/common.js"></script>
+
+    <!-- Yandex.Metrika counter -->
+<!--    <script>-->
+<!--        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};-->
+<!--            m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})-->
+<!--        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");-->
+
+<!--        ym(70137172, "init", {-->
+<!--            clickmap:true,-->
+<!--            trackLinks:true,-->
+<!--            accurateTrackBounce:true,-->
+<!--            webvisor:true-->
+<!--        });-->
+<!--    </script>-->
+<!--    <noscript><div><img src="https://mc.yandex.ru/watch/70137172" style="position:absolute; left:-9999px;" alt="фото" /></div></noscript>-->
+    <!-- /Yandex.Metrika counter -->
+
+    <!-- Global site tag (gtag.js) - Google Ads: 342943335 -->
+<!--    <script async="" src="https://www.googletagmanager.com/gtag/js?id=AW-342943335"></script>-->
+<!--    <script>-->
+<!--        window.dataLayer = window.dataLayer || [];-->
+<!--        function gtag(){dataLayer.push(arguments);}-->
+<!--        gtag('js', new Date());-->
+
+<!--        gtag('config', 'AW-342943335');-->
+<!--    </script>-->
 {% endblock %}
 
 </body>
