--- a/views/our-works/index.html
+++ b/views/our-works/index.html
@@ -50,15 +50,15 @@
 					</div>
 				</div>
 
-				<nav id="menu" class="menu-nav">
-					<ul class="header_list">
-						<li><a href="/" class="header_li">Главная</a></li>
-						<li><a href="/works" class="header_li">Наши работы</a></li>
-						<li><a href="/masters" class="header_li">Наши мастера</a></li>
-						<li><a href="/price" class="header_li">Прайс</a></li>
-						<li><a href="/review" class="header_li">Отзывы</a></li>
-						<li><a href="/contacts" class="header_li">Контакты</a></li>
-					</ul>
+				nav id="menu" class="menu-nav">
+				<ul class="header_list">
+					<li><a href="/" class="header_li">Главная</a></li>
+					<li><a href="/works" class="header_li">Наши работы</a></li>
+					<li><a href="/masters" class="header_li" id="master-link">Наши мастера</a></li>
+					<li><a href="/price" class="header_li">Прайс</a></li>
+					<li><a href="/review" class="header_li">Отзывы</a></li>
+					<li><a href="/contacts" class="header_li">Контакты</a></li>
+				</ul>
 				</nav>
 
 				<div class="header-burger toggle-mnu">
