--- a/views/our-masters/index.html
+++ b/views/our-masters/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Груминг салон в Москве №1, стрижка собак и кошек премиум класса, лучшие мастера в Европе, стрижка, груминг, экспресс-линька в центре Москвы, 8(499)430-00-26">
+	<meta name="description" content="Наши мастера груминга и имеют наивысшую квалификацию, любят животных и могут подстричь вашего питомца именно так как вы того хотите 7(499)430-00-26">
 	<meta name="yandex" content="noindex, nofollow" />
 
-	<title>Груминг салон в Москве №1</title>
+	<title>Наши мастера груминга</title>
 
 	<link rel="icon" href="/img/favicon.ico">
 
@@ -84,12 +84,11 @@
 	<div class="section-slic_slider" id="sec3">
 		<div class="container">
 			<div id="master">
+				<h1>Наши мастера</h1>
 				<div class="row">
 					<div class="slider slider_master">
 						<div class="slider__item filter">
 							<div class="slide-info">
-								<div class="title">Наши мастера</div>
-								<hr>
 								<div class="slider-title">
 									<img src="/img/karina.png" alt="фото">
 									<div class="doc">
@@ -104,8 +103,6 @@
 						</div>
 						<div class="slider__item filter">
 							<div class="slide-info">
-								<div class="title">Наши мастера</div>
-								<hr>
 								<div class="slider-title">
 									<img src="/img/svetlana.jpg" alt="фото">
 									<div class="doc">
@@ -122,6 +119,41 @@
 		</div>
 	</div>
 
+	<div class="section-recording" id="sec5">
+		<div class="container">
+			<form id="contactform" method="post" class="validateform" name="contactform">
+				<input id="csrf_field" type="hidden" value="csrf_field()">
+
+				<a id="top"></a>
+
+				<div class="recording">
+					<div class="form-group">
+						<div class="input-group">
+							<input class="form-control" type="text" id="name" name="name" placeholder="Имя">
+						</div>
+						<div class="input-group">
+							<input class="form-control" type="tel" id="phone" name="phone" placeholder="Телефон">
+						</div>
+					</div>
+
+					<div class="form-group">
+						<div id="sendmessage" class="hidden green bold">
+							Спасибо! Ваша заявка принята.<br /> Ожидайте звонок администратора.
+						</div>
+
+						<div id="senderror" style="color: red; font-weight: bold;" class="hidden">
+							Заполните пустые поля.
+						</div>
+					</div>
+
+					<div class="time-section">
+						<button type="submit" class="btn-cats">Записаться</button>
+					</div>
+				</div>
+
+			</form>
+		</div>
+	</div>
 
 	<footer class="footer" id="sec9">
 		<div class="container">
