--- a/views/our-works/index.html
+++ b/views/our-works/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Груминг салон в Москве №1, стрижка собак и кошек премиум класса, лучшие мастера в Европе, стрижка, груминг, экспресс-линька в центре Москвы, 8(499)430-00-26">
+	<meta name="description" content="Фото работы нашего груминг салона, стрижи собак и кошек сделанные нашими мастерами для вас и ваших питомцев 7(499)430-00-26">
 	<meta name="yandex" content="noindex, nofollow" />
 
-	<title>Груминг салон в Москве №1</title>
+	<title>Работы нашего груминг салона, фото стрижек собак и кошек</title>
 
 	<link rel="icon" href="/img/favicon.ico">
 
@@ -84,7 +84,7 @@
 	<div class="section-our_work section" id="sec2">
 		<div class="container">
 			<div id="work">
-				<h1>Груминг салон в Москве №1</h1>
+				<h1>Наши работы</h1>
 				<hr>
 				<div class="slider-desktop">
 					<div class="row">
@@ -157,6 +157,42 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+
+	<div class="section-recording" id="sec5">
+		<div class="container">
+			<form id="contactform" method="post" class="validateform" name="contactform">
+				<input id="csrf_field" type="hidden" value="csrf_field()">
+
+				<a id="top"></a>
+
+				<div class="recording">
+					<div class="form-group">
+						<div class="input-group">
+							<input class="form-control" type="text" id="name" name="name" placeholder="Имя">
+						</div>
+						<div class="input-group">
+							<input class="form-control" type="tel" id="phone" name="phone" placeholder="Телефон">
+						</div>
+					</div>
+
+					<div class="form-group">
+						<div id="sendmessage" class="hidden green bold">
+							Спасибо! Ваша заявка принята.<br /> Ожидайте звонок администратора.
+						</div>
+
+						<div id="senderror" style="color: red; font-weight: bold;" class="hidden">
+							Заполните пустые поля.
+						</div>
+					</div>
+
+					<div class="time-section">
+						<button type="submit" class="btn-cats">Записаться</button>
+					</div>
+				</div>
+
+			</form>
 		</div>
 	</div>
 
