--- a/views/price/index.html
+++ b/views/price/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Груминг салон в Москве №1, стрижка собак и кошек премиум класса, лучшие мастера в Европе, стрижка, груминг, экспресс-линька в центре Москвы, 8(499)430-00-26">
+	<meta name="description" content="Цены на стрижки собак и кошек в Москве полный прайс на услуги груминг салона в центре города 7(499)430-00-26">
 	<meta name="yandex" content="noindex, nofollow" />
 
-	<title>Груминг салон в Москве №1</title>
+	<title>Цены на груминг в Москве полный прайс</title>
 
 	<link rel="icon" href="/img/favicon.ico">
 
@@ -83,10 +83,9 @@
 
 	<div class="section-prics" id="sec4">
 		<div id="price">
+			<h1>Цены на груминг в Москве</h1>
 			<div class="container">
 				<div class="mobile-margin-top">
-					<h2 class="title">Прайс</h2>
-					<hr>
 					<div class="text-center main-font" style="margin: 20px">
 						<button id="btn-complex" class="tab-btn btn-tab-active">Комплекс: под машинку / модельная </button>
 						<button id="btn-hygiene" class="tab-btn">Гигиена </button>
@@ -1525,6 +1524,42 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+
+	<div class="section-recording" id="sec5">
+		<div class="container">
+			<form id="contactform" method="post" class="validateform" name="contactform">
+				<input id="csrf_field" type="hidden" value="csrf_field()">
+
+				<a id="top"></a>
+
+				<div class="recording">
+					<div class="form-group">
+						<div class="input-group">
+							<input class="form-control" type="text" id="name" name="name" placeholder="Имя">
+						</div>
+						<div class="input-group">
+							<input class="form-control" type="tel" id="phone" name="phone" placeholder="Телефон">
+						</div>
+					</div>
+
+					<div class="form-group">
+						<div id="sendmessage" class="hidden green bold">
+							Спасибо! Ваша заявка принята.<br /> Ожидайте звонок администратора.
+						</div>
+
+						<div id="senderror" style="color: red; font-weight: bold;" class="hidden">
+							Заполните пустые поля.
+						</div>
+					</div>
+
+					<div class="time-section">
+						<button type="submit" class="btn-cats">Записаться</button>
+					</div>
+				</div>
+
+			</form>
 		</div>
 	</div>
 
