--- a/views/review/index.html
+++ b/views/review/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Груминг салон в Москве №1, стрижка собак и кошек премиум класса, лучшие мастера в Европе, стрижка, груминг, экспресс-линька в центре Москвы, 8(499)430-00-26">
+	<meta name="description" content="Отзывы о груминг салоне номер один в Москве, один из лучших салонов по стрижке собак и кошек в Москве 7(499)430-00-26">
 	<meta name="yandex" content="noindex, nofollow" />
 
-	<title>Груминг салон в Москве №1</title>
+	<title>Отзывы о салоне груминга в Москве</title>
 
 	<link rel="icon" href="/img/favicon.ico">
 
@@ -84,8 +84,7 @@
 	<div class="section-review" id="sec8">
 		<div class="container">
 			<div id="review">
-				<h2 class="title white">Отзывы посетителей</h2>
-
+				<h1 class="title white">Отзывы о нашем салоне груминга</h1>
 			</div>
 		</div>
 
