--- a/views/contacts/index.html
+++ b/views/contacts/index.html
@@ -74,9 +74,9 @@
                     </div>
                 </div>
 
-                <div class="btn-section">
-                    <a class="btn" href="#top">Записаться</a>
-                </div>
+<!--                <div class="btn-section">-->
+<!--                    <a class="btn" href="#top">Записаться</a>-->
+<!--                </div>-->
             </header>
         </div>
     </div>
