--- a/views/main/index.html
+++ b/views/main/index.html
@@ -1784,7 +1784,7 @@ src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
                 <div class="footer-contacts">
                     <div class="contact">
                         <div class="contact-site">
-                            <img src="/img/1.svg" alt="фото">
+                            <img src="/img/phone-ico.png" alt="фото">
                             <img style="width: 20px !important;
                             margin-bottom: -6px !important;" src="/img/moscow_metro_mini.png" alt="фото"> Новослободская, Долгоруковская, 40
                         </div>
