--- a/views/our-works/index.html
+++ b/views/our-works/index.html
@@ -204,22 +204,22 @@
 				<div class="footer-contacts">
 					<div class="contact">
 						<div class="contact-site">
-							<img src="/img/1.svg" alt="фото">
+							<img src="/img/footer/metro.png" alt="фото">
 							<img style="width: 20px !important;
                             margin-bottom: -6px !important;" src="/img/moscow_metro_mini.png" alt="фото"> Новослободская, Долгоруковская, 40
 						</div>
 						<div class="contact-site">
 							<div id="footer-phone" class="phone">
-								<img src="/img/2.svg" alt="фото">
+								<img src="/img/footer/phone.png" alt="фото">
 								<a href="tel:+7(499)430-00-26">+7 (499) 430-00-26</a>
 							</div>
 						</div>
-						<div class="contact-site"><img src="/img/5.svg" alt="фото">пн-пт: 11:00 - 20:00 <span>сб-вс: 10:18</span></div>
-						<div class="contact-site"><img src="/img/3.svg" alt="фото"><a href="mailto:fo@salon-groom.ru">info@salon-groom.ru</a></div>
-						<div class="contact-site"><img src="/img/4.svg" alt="фото"><a href="https://www.instagram.com/salongroom1/?igshid=1pvyxcewbq2yq">salongroom1 Instagram</a></div>
+						<div class="contact-site"><img src="/img/footer/schedule.png" alt="фото">пн-пт: 11:00 - 20:00 <span>сб-вс: 10:18</span></div>
+						<div class="contact-site"><img src="/img/footer/info.png" alt="фото"><a href="mailto:info@salon-groom.ru">info@salon-groom.ru</a></div>
+						<div class="contact-site"><img src="/img/footer/instagram.png" alt="фото"><a href="https://www.instagram.com/salongroom1/?igshid=1pvyxcewbq2yq">salongroom1 Instagram</a></div>
 					</div>
 				</div>
-				<div class="footer-title"><a href="https://salon-groom.ru/">salon-groom.ru</a> ©2022 Все права защищены</div>
+				<div class="footer-title"><a href="https://salon-groom.ru/">salon-groom.ru</a> ©@php echo Date('Y'); @endphp Все права защищены</div>
 			</div>
 		</div>
 	</footer>
