--- a/views/contacts/index.html
+++ b/views/contacts/index.html
@@ -82,8 +82,8 @@
     </div>
 
     <footer class="footer" id="sec9">
-        <div class="container">
-            <div class="title">Контакты</div>
+        <h1 class="container">
+            <h1>Контакты</h1>
             <hr>
             <div id="contact">
                 <div class="footer-contacts">
