--- a/views/price/index.html
+++ b/views/price/index.html
@@ -1586,7 +1586,7 @@
 						<div class="contact-site"><img src="/img/footer/instagram.png" alt="фото"><a href="https://www.instagram.com/salongroom1/?igshid=1pvyxcewbq2yq">salongroom1 Instagram</a></div>
 					</div>
 				</div>
-				<div class="footer-title"><a href="https://salon-groom.ru/">salon-groom.ru</a> ©@php echo Date('Y'); @endphp Все права защищены</div>
+				<div class="footer-title"><a href="https://salon-groom.ru/">salon-groom.ru</a> © 2022 Все права защищены</div>
 			</div>
 		</div>
 	</footer>
