--- a/views/main/index.html
+++ b/views/main/index.html
@@ -1799,7 +1799,7 @@ src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
                         <div class="contact-site"><img src="/img/footer/instagram.png" alt="фото"><a href="https://www.instagram.com/salongroom1/?igshid=1pvyxcewbq2yq">salongroom1 Instagram</a></div>
                     </div>
                 </div>
-                <div class="footer-title"><a href="https://salon-groom.ru/">salon-groom.ru</a> ©@php echo Date('Y'); @endphp Все права защищены</div>
+                <div class="footer-title"><a href="https://salon-groom.ru/">salon-groom.ru</a> © 2022 Все права защищены</div>
             </div>
         </div>
     </footer>
