изменено:      views/our-works/index.html

--- a/views/our-works/index.html
+++ b/views/our-works/index.html
@@ -50,7 +50,7 @@
 					</div>
 				</div>
 
-				nav id="menu" class="menu-nav">
+				<nav id="menu" class="menu-nav">
 				<ul class="header_list">
 					<li><a href="/" class="header_li">Главная</a></li>
 					<li><a href="/works" class="header_li">Наши работы</a></li>
