--- a/views/contacts/index.html
+++ b/views/contacts/index.html
@@ -82,7 +82,7 @@ src="https://www.facebook.com/tr?id=6568225839919373&ev=PageView&noscript=1"
     </div>
 
     <footer class="footer" id="sec9">
-        <h1 class="container">
+        <div>
             <h1>Контакты</h1>
             <hr>
             <div id="contact">
