изменено: views/contacts/index.html

--- a/views/contacts/index.html
+++ b/views/contacts/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Груминг салон в Москве №1, стрижка собак и кошек премиум класса, лучшие мастера в Европе, стрижка, груминг, экспресс-линька в центре Москвы, 8(499)430-00-26">
+    <meta name="description" content="Контакты груминг салона на Новослободской, наш номер телефона ☎ 8(499)430-00-26, звоните оставляйте заявки! Мы с радостью ответим на любые вопросы!">
 <!--    <meta name="yandex" content="noindex, nofollow" />-->
 
-    <title>Груминг салон в Москве №1</title>
+    <title>Контакты груминг салона №1 в Москве на Новослободской</title>
 
     <link rel="icon" href="/img/favicon.ico">
 
