--- a/views/contacts/index.html
+++ b/views/contacts/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Контакты груминг салона на Новослободской, наш номер телефона ☎ 8(499)430-00-26, звоните оставляйте заявки! Мы с радостью ответим на любые вопросы!">
 <!--    <meta name="yandex" content="noindex, nofollow" />-->
 
+    {% if yandexContent == 'noindex' %}
+    <meta name="yandex" content="noindex, nofollow" />
+    {% endif %}
+
     <title>Контакты груминг салона №1 в Москве на Новослободской</title>
 
     <link rel="icon" href="/img/favicon.ico">
