--- a/views/our-masters/index.html
+++ b/views/our-masters/index.html
@@ -7,6 +7,10 @@
 	<meta name="description" content="Наши мастера груминга и имеют наивысшую квалификацию, любят животных и могут подстричь вашего питомца именно так как вы того хотите 7(499)430-00-26">
 <!--	<meta name="yandex" content="noindex, nofollow" />-->
 
+	{% if yandexContent == 'noindex' %}
+	<meta name="yandex" content="noindex, nofollow" />
+	{% endif %}
+
 	<title>Наши мастера груминга</title>
 
 	<link rel="icon" href="/img/favicon.ico">
