--- a/views/our-works/index.html
+++ b/views/our-works/index.html
@@ -7,6 +7,10 @@
 	<meta name="description" content="Фото работы нашего груминг салона, стрижи собак и кошек сделанные нашими мастерами для вас и ваших питомцев 7(499)430-00-26">
 <!--	<meta name="yandex" content="noindex, nofollow" />-->
 
+	{% if yandexContent == 'noindex' %}
+	<meta name="yandex" content="noindex, nofollow" />
+	{% endif %}
+
 	<title>Работы нашего груминг салона, фото стрижек собак и кошек</title>
 
 	<link rel="icon" href="/img/favicon.ico">
