--- a/views/price/index.html
+++ b/views/price/index.html
@@ -7,6 +7,10 @@
 	<meta name="description" content="Цены на стрижки собак и кошек в Москве полный прайс на услуги груминг салона в центре города 7(499)430-00-26">
 <!--	<meta name="yandex" content="noindex, nofollow" />-->
 
+	{% if yandexContent == 'noindex' %}
+	<meta name="yandex" content="noindex, nofollow" />
+	{% endif %}
+
 	<title>Цены на груминг в Москве полный прайс</title>
 
 	<link rel="icon" href="/img/favicon.ico">
