--- a/views/review/index.html
+++ b/views/review/index.html
@@ -7,6 +7,10 @@
 	<meta name="description" content="Отзывы о груминг салоне номер один в Москве, один из лучших салонов по стрижке собак и кошек в Москве 7(499)430-00-26">
 <!--	<meta name="yandex" content="noindex, nofollow" />-->
 
+	{% if yandexContent == 'noindex' %}
+	<meta name="yandex" content="noindex, nofollow" />
+	{% endif %}
+
 	<title>Отзывы о салоне груминга в Москве</title>
 
 	<link rel="icon" href="/img/favicon.ico">
