--- a/views/our-masters/index.html
+++ b/views/our-masters/index.html
@@ -94,7 +94,7 @@
 						<div class="slider__item filter">
 							<div class="slide-info">
 								<div class="slider-title">
-									<img src="/img/karina.png" alt="фото">
+									<img src="/img/masters/karina.webp" alt="фото">
 									<div class="doc">
 										<div class="master-name">Карина</div>
 
@@ -108,11 +108,11 @@
 						<div class="slider__item filter">
 							<div class="slide-info">
 								<div class="slider-title">
-									<img src="/img/svetlana.jpg" alt="фото">
+									<img src="/img/masters/alla.webp" alt="фото">
 									<div class="doc">
-										<div class="master-name">Светлана</div>
-										<div class="div-master">В груминге относительно недавно - чуть более 2 лет. Молодая, активная, Светлана любит свою профессию и горит желанием развиваться. Если понаблюдать за работой
-											мастера со стороны, видно с каким усердием она подходит к любому нюансу. Света очень хочет стать лучшей в профессии, и мы ее в этом поддерживаем.</div>
+										<div class="master-name">Алла</div>
+										<div class="div-master">В груминге относительно недавно - чуть более 2 лет. Молодая, активная, Алла любит свою профессию и горит желанием развиваться. Если понаблюдать за работой
+											мастера со стороны, видно с каким усердием она подходит к любому нюансу. Алла очень хочет стать лучшей в профессии, и мы ее в этом поддерживаем.</div>
 									</div>
 								</div>
 							</div>
