--- a/views/main/index.html
+++ b/views/main/index.html
@@ -8,7 +8,7 @@
 <!--    <meta name="yandex" content="noindex, nofollow" />-->
 
     {% if yandexContent == 'noindex' %}
-    <meta name="yandex" content="noindex, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
     {% endif %}
 
     <meta name="google-site-verification" content="I-zOAzToGG8jjZYE9mkj4A8ypX09_hg8BbMQSzS-6Gg" />
@@ -173,7 +173,7 @@
                                 <div class="title">Наши мастера</div>
                                 <hr>
                                 <div class="slider-title">
-                                    <img src="/img/karina.png" alt="фото">
+                                    <img src="/img/masters/karina.webp" alt="фото">
                                     <div class="doc">
                                         <div class="master-name">Карина</div>
 
@@ -189,11 +189,11 @@
                                 <div class="title">Наши мастера</div>
                                 <hr>
                                 <div class="slider-title">
-                                    <img src="/img/svetlana.jpg" alt="фото">
+                                    <img src="/img/masters/alla.webp" alt="фото">
                                     <div class="doc">
-                                        <div class="master-name">Светлана</div>
-                                        <div class="div-master">В груминге относительно недавно - чуть более 2 лет. Молодая, активная, Светлана любит свою профессию и горит желанием развиваться. Если понаблюдать за работой
-                                            мастера со стороны, видно с каким усердием она подходит к любому нюансу. Света очень хочет стать лучшей в профессии, и мы ее в этом поддерживаем.</div>
+                                        <div class="master-name">Алла</div>
+                                        <div class="div-master">В груминге уже более 10 лет. Молодая, активная, Алла любит свою профессию и горит желанием развиваться. Если понаблюдать за работой
+                                            мастера со стороны, видно с каким усердием она подходит к любому нюансу. Алла очень хочет стать лучшей в профессии, и мы ее в этом поддерживаем.</div>
                                     </div>
                                 </div>
                             </div>
