--- a/views/our-masters/index.html
+++ b/views/our-masters/index.html
@@ -8,7 +8,7 @@
 <!--	<meta name="yandex" content="noindex, nofollow" />-->
 
 	{% if yandexContent == 'noindex' %}
-	<meta name="yandex" content="noindex, nofollow" />
+	<meta name="robots" content="noindex, nofollow" />
 	{% endif %}
 
 	<title>Наши мастера груминга</title>
@@ -111,7 +111,7 @@
 									<img src="/img/masters/alla.webp" alt="фото">
 									<div class="doc">
 										<div class="master-name">Алла</div>
-										<div class="div-master">В груминге относительно недавно - чуть более 2 лет. Молодая, активная, Алла любит свою профессию и горит желанием развиваться. Если понаблюдать за работой
+										<div class="div-master">В груминге уже более 10 лет. Молодая, активная, Алла любит свою профессию и горит желанием развиваться. Если понаблюдать за работой
 											мастера со стороны, видно с каким усердием она подходит к любому нюансу. Алла очень хочет стать лучшей в профессии, и мы ее в этом поддерживаем.</div>
 									</div>
 								</div>
