--- a/views/our-works/index.html
+++ b/views/our-works/index.html
@@ -8,7 +8,7 @@
 <!--	<meta name="yandex" content="noindex, nofollow" />-->
 
 	{% if yandexContent == 'noindex' %}
-	<meta name="yandex" content="noindex, nofollow" />
+	<meta name="robots" content="noindex, nofollow" />
 	{% endif %}
 
 	<title>Работы нашего груминг салона, фото стрижек собак и кошек</title>
