--- a/views/price/index.html
+++ b/views/price/index.html
@@ -8,7 +8,7 @@
 <!--	<meta name="yandex" content="noindex, nofollow" />-->
 
 	{% if yandexContent == 'noindex' %}
-	<meta name="yandex" content="noindex, nofollow" />
+	<meta name="robots" content="noindex, nofollow" />
 	{% endif %}
 
 	<title>Цены на груминг в Москве полный прайс</title>
