--- a/views/contacts/index.html
+++ b/views/contacts/index.html
@@ -8,7 +8,7 @@
 <!--    <meta name="yandex" content="noindex, nofollow" />-->
 
     {% if yandexContent == 'noindex' %}
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="noindex, follow"/>
     {% endif %}
 
     <title>Контакты груминг салона №1 в Москве на Новослободской</title>
