--- a/views/main/index.html
+++ b/views/main/index.html
@@ -8,7 +8,7 @@
 <!--    <meta name="yandex" content="noindex, nofollow" />-->
 
     {% if yandexContent == 'noindex' %}
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="noindex, follow"/>
     {% endif %}
 
     <meta name="google-site-verification" content="I-zOAzToGG8jjZYE9mkj4A8ypX09_hg8BbMQSzS-6Gg" />
