--- a/views/review/index.html
+++ b/views/review/index.html
@@ -8,7 +8,7 @@
 <!--	<meta name="yandex" content="noindex, nofollow" />-->
 
 	{% if yandexContent == 'noindex' %}
-	<meta name="robots" content="noindex, nofollow" />
+	<meta name="robots" content="noindex, follow"/>
 	{% endif %}
 
 	<title>Отзывы о салоне груминга в Москве</title>
