--- a/views/price/index.html
+++ b/views/price/index.html
@@ -87,8 +87,21 @@
 	<div class="section-prics" id="sec4">
 		<div id="price">
 			<h1>Цены на груминг в Москве</h1>
-			<div class="container">
-				
+
+			<div class="text-center main-font" style="margin: 20px">
+				<button id="btn-complex" class="tab-btn btn-tab-active">Комплекс: под машинку / модельная </button>
+				<button id="btn-hygiene" class="tab-btn btn-tab-active">Гигиена </button>
+				<button id="btn-washing-drying" class="tab-btn btn-tab-active">Мытье-сушка </button>
+				<button id="btn-trimming" class="tab-btn btn-tab-active">Тримминг </button>
+				<button id="btn-express-molt" class="tab-btn btn-tab-active">Экспресс-линька </button>
+				<button id="btn-cats" class="tab-btn btn-tab-active">Кошки </button>
+				<button id="btn-additional-services" class="tab-btn btn-tab-active">Доп. услуги </button>
+			</div>
+			<div class="row_ main-font_">
+				<h5 style="text-align: center">Спрашивайте цены на услуги у менеджера</h5>
+			</div>
+
+
 				<!--
 
 				<div class="mobile-margin-top">
@@ -1535,7 +1548,7 @@
 				</div>
 				-->
 
-			</div>
+
 		</div>
 	</div>
 
